6.14.4.1
    Documentation:
        * More hyperlink corrections
        * Returned Coverity Scan badge to top-level, version-specific index.html

    Misc:
        * Removed lint found by Coverity Scan

    DevOps:
        * Enhanced "pre-commit" hook to vet the version ID in CHANGE_LOG and ensure a timestamp
          in CHANGE_LOG when committing to the main branch
        * Enhanced "OnPush.yml":
            * Vet the version ID in CHANGE_LOG and "configure.ac"
            * Update the "versions.html" file for LDM documentation on the artifacts server
        * Deleted "--disable-root-actions" from Coverity Scan target
        * Added deletion of /tmp/pqact_test.conf before creation due to /tmp having the "restricted
          deletion" bit set
        * Deleted use of CodeQL in OnPush.yml in favor of using Coverity Scan because it's better

6.14.3  2022-12-22T13:34:03-0700
    Documentation:
        * Fixed more links in HTML documentation

6.14.2	2022-12-20T15:32:36-0700
    Documentation:
        * Added missing graphic "product-queue.svg"
        * Fixed links in HTML documentation

6.14.1  2022-12-19T12:40:42-0700
    Installation:
        * Eliminated the configure(1)-script option "--disable-root-actions". Installation now
          proceeds as if this option were always specified. The "make install" step now prints a
          message at the end stating that the superuser (i.e., "root") must now execute the command
          "make root-actions". This was necessary in order to migrate the continuous-integration
          workflow to GitHub actions: autoconf(1) 2.71 on the Ubuntu 22.04 platform creates an
          invalid configure(1) script if the autoconf(1) configuration-file contains this option.

          Installation from the unpacked distribution now comprises the following steps (details
          omitted):
            - Execute the configure(1) script as the LDM user
            - "make install" as the LDM user