@@ -1,4 +1,8 @@
 6.14.4.1
+    ldmd(1):
+        * Eliminated log messages when an upstream LDM process that was ACCEPTed terminates. This
+          should reduce the number of log messages on the rtstats(1) mothership.
+
     Documentation:
         * More hyperlink corrections
         * Returned Coverity Scan badge to top-level, version-specific index.html
